succesfully migrated database

--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -1,10 +1,13 @@
 # A generic, single database configuration.
 
 [alembic]
-# Path to your SQLAlchemy models
-script_location = migrations
-# Database connection URI
-sqlalchemy.url = sqlite:///backlink_generator.db
+# template used to generate migration files
+# file_template = %%(rev)s_%%(slug)s
+
+# set to 'true' to run the environment during
+# the 'revision' command, regardless of autogenerate
+# revision_environment = false
+
 
 # Logging configuration
 [loggers]
@@ -17,12 +20,12 @@ keys = console
 keys = generic
 
 [logger_root]
-level = INFO
+level = WARN
 handlers = console
 qualname =
 
 [logger_sqlalchemy]
-level = INFO
+level = WARN
 handlers =
 qualname = sqlalchemy.engine
 
