--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
 alembic==1.13.2
+beautifulsoup4==4.12.3
 blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
+oauthlib==3.2.2
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 python-dotenv==1.0.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+soupsieve==2.6
 SQLAlchemy==2.0.35
 typing_extensions==4.12.2
+urllib3==2.2.3
 Werkzeug==3.0.4
