--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ anyio==4.6.0
 APScheduler==3.10.4
 beautifulsoup4==4.12.3
 blinker==1.8.2
+cachelib==0.13.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
@@ -14,6 +15,7 @@ email_sender==1.2
 filelock==3.16.1
 Flask==3.0.3
 Flask-Migrate==4.0.7
+Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
 fsspec==2024.9.0
 google-auth==2.35.0
@@ -29,6 +31,7 @@ jiter==0.5.0
 mailgun==0.1.1
 Mako==1.3.5
 MarkupSafe==2.1.5
+msgspec==0.18.6
 oauthlib==3.2.2
 openai==1.50.2
 packaging==24.1
